--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,3 +15,12 @@ jobs:
       # Checkout Code
       - name: Checkout code
         uses: actions/checkout@v3
+      # Set up NodeJS 
+      - name: Set up NodeJS
+        uses: actions/setup-node@v3
+        with:
+          node-version: '14'
+
+      # Install NodeJS dependencies
+      - name: Install NodeJS dependencies
+        run: npm install
