--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,13 @@
-sonar.projectKey=iQuantC_Complete_CICD_02
-sonar.organization=iquantc
+sonar.projectKey=hasnainhakim_Repo-CI-CD-Blog
+sonar.organization=hasnainhakim
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=Repo-CI-CD-Blog
+#sonar.projectVersion=1.0
+
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
