--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,9 +65,10 @@ jobs:
       # Install kubectl
       - name: Install kubectl
         run: |
-         sudo curl -o kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.21.2/2021-07-05/bin/linux/amd64/kubectl
-         sudo chmod +x ./kubectl
-         sudo mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$HOME/bin:$PATH
+         mkdir -p /tmp/kubectl
+         curl -o /tmp/kubectl/kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.21.2/2021-07-05/bin/linux/amd64/kubectl
+         chmod +x /tmp/kubectl/kubectl
+         export PATH=/tmp/kubectl:$PATH
 
       # Update Kubeconfig
       - name: Update kubeconfig
