--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,7 +80,7 @@ jobs:
 
       - name: Authenticate Kubernetes client
         run: |
-         TOKEN=$(aws eks get-token --cluster-name actions-eks-cluster)
+         TOKEN=$(aws eks get-token --cluster-name actions-eks-cluster | jq -r '.status.token')
          kubectl config set-credentials actions-eks-cluster --token=$TOKEN
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
